--- a/form/form login.css
+++ b/form/form login.css
@@ -10,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/form/foto/BG_CS_PV2_71.jpeg');
+    background: url('/foto/BG_CS_PV2_71.jpeg');
     background-size: cover;
     background-position: center;
 }
@@ -113,4 +113,5 @@ body{
 
 .register-link p a:hover {
     text-decoration: underline;
+
 }
